--- a/sinatra_app/Gemfile
+++ b/sinatra_app/Gemfile
@@ -1,7 +1,9 @@
 source 'https://rubygems.org'
 
 gem 'sinatra'
+gem 'sinatra-reloader'
 gem 'data_mapper'
 gem 'thin'
+gem 'pry'
 gem 'dm-postgres-adapter'
 gem 'rack', '1.4.1'
